# educational_rag

./: .gitignore  README.md  main.py  pyproject.toml
data/educational_db/: chroma.sqlite3
src/: education.ipynb  my_visualizer.py
